# Crewai-Pruebas

./: README.md  pyproject.toml  report.md
src/soporte/: crew.py  main.py
src/soporte/config/: agents.yaml  tasks.yaml
